# spellbook

./: .gitignore  CMakeLists.txt  package.xml  spellbook-config-version.cmake.in  spellbook-config.cmake.in
cmake/Modules/: EnableCXX11.cmake  LocateEigen.cmake  PrintSearchPaths.cmake
include/spellbook/geometry/rotations/: euler_angles.h  quaternion.h
include/spellbook/geometry/vector/: vec2.h
include/spellbook/geometry/vector/detail/: vec2.h
include/spellbook/grid/: Grid-inl.h  Grid.h
include/spellbook/random/: gaussian.h
include/spellbook/raster/: raster.h
include/spellbook/raster/detail/: raster.h
spellbook/: CMakeLists.txt  spellbook-config.cmake.in
spellbook/src/: CMakeLists.txt
spellbook/src/dubins/: CMakeLists.txt  dubins.cpp
spellbook/src/include/spellbook/: spellbook.h
spellbook/src/include/spellbook/angles/: angles.h
spellbook/src/include/spellbook/angles/detail/: angles.h
spellbook/src/include/spellbook/geometry/rotations/: axis_angle.h  euler_angles.h  quaternion.h  rotmat.h
spellbook/src/include/spellbook/geometry/rotations/detail/: euler_angles.h  quaternion.h  rotmat.h
spellbook/src/include/spellbook/geometry/vector/: vec2.h  vec3.h  vec4.h
spellbook/src/include/spellbook/geometry/vector/detail/: vec2.h  vec3.h  vec4.h
spellbook/src/include/spellbook/grid/: grid.h
spellbook/src/include/spellbook/grid/detail/: grid.h
spellbook/src/include/spellbook/log/: logging.h
spellbook/src/include/spellbook/mapgen/: DFSMazeGenerator.h
spellbook/src/include/spellbook/math/: constants.h
spellbook/src/include/spellbook/matrix/: matrix.h
spellbook/src/include/spellbook/matrix/detail/: matrix.h
spellbook/src/include/spellbook/poses/detail/: pose2.h
spellbook/src/include/spellbook/raster/: raster.h
spellbook/src/include/spellbook/raster/detail/: raster.h
spellbook/src/include/spellbook/term/: term.h
spellbook/src/include/spellbook/term/detail/: term.h
spellbook/src/mapgen/: CMakeLists.txt  DFSMazeGenerator.cpp
spellbook/src/memory/: CMakeLists.txt
src/: CMakeLists.txt
src/costmap_extruder/: CostmapExtruder.cpp
src/include/spellbook/geometry/rotations/: axis_angle.h  quaternion.h
src/include/spellbook/geometry/rotations/detail/: axis_angle.h  quaternion.h
src/include/spellbook/geometry/vector/: vec2.h  vec3.h
src/include/spellbook/geometry/vector/detail/: vec2.h  vec3.h
src/include/spellbook/grid/: Grid.h
src/include/spellbook/mapgen/: MapGenerator.h
src/mapgen/: CMakeLists.txt
test/: CMakeLists.txt  grid_test.cpp  main.cpp  matrix_test.cpp  rotations_test.cpp
