<?xml version="1.0"?>
<package>
    <name>spellbook</name>
    <version>0.0.0</version>
    <description>Aurone's Spellbook</description>

    <maintainer email="andrew.dornbush@gmail.com">aurone</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>boost</build_depend>
    <build_depend>eigen</build_depend>

    <run_depend>boost</run_depend>
    <run_depend>eigen</run_depend>
</package>
